--- a/conditional_detr.ipynb
+++ b/conditional_detr.ipynb
@@ -9,15 +9,11 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "import math\n",
     "import torch\n",
     "import requests\n",
     "\n",
-    "from torch import nn\n",
     "from PIL import Image\n",
-    "from matplotlib import pyplot as plt\n",
-    "from util.misc import (NestedTensor, nested_tensor_from_tensor_list)\n",
-    "from predict_utils import transform, rescale_bboxes,plot_results, gen_sineembed_for_position\n",
+    "from predict_utils import transform, rescale_bboxes,plot_results, gen_sineembed_for_position,nested_tensor_from_tensor_list\n",
     "\n",
     "torch.set_grad_enabled(False)\n",
     "%matplotlib inline"
@@ -73,8 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "# condational detr forward\n",
